--- a/Booking/appsettings.json
+++ b/Booking/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=your_server_name;Database=your_database_name;User Id=your_username;Password=your_password;"
+    "DefaultConnection": "Server=193.10.202.71;Database=Booking;User Id=your_username;Password=your_password;"
   }
 }
