--- a/Booking/appsettings.Development.json
+++ b/Booking/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=193.10.202.71;Database=BookingDb;User Id=sa;Password=TSB100sql;TrustServerCertificate=True;"
   }
 }
